--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ googleAnalytics = "G-D5M6G40M25"
 
   github = 'tang-hi'
 
-  avatar = 'tangdhcs@gmail.com'
+  avatar = 'avatar.jpeg'
   name = 'tang donghai'
   bio = 'take it easy'
 # ------------------------------
