update short Name

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ BaseURL = 'https://tang-hi.github.io/'
 author = "tang donghai"
 languageCode = 'en-us'
 defaultContentLanguage = "en"
-disqusShortname = 'tangdh.life'
+disqusShortname = 'tangdh-life'
 title = "Tangdh's Blog"
 theme = "Vitae"
 paginate = 5
