--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
     "katex": "^0.16.10",
+    "pnpm": "^8.15.6",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "typescript": "^5.3.3",
